# connectedhomeip

examples/ayla-app/senscomm/scm1612s/: BUILD.gn  args.gni
examples/ayla-app/senscomm/scm1612s/data_model/bulb/: ayla_demo.matter  ayla_demo.zap
examples/ayla-app/senscomm/scm1612s/data_model/plug/: ayla_demo.zap
examples/ayla-app/senscomm/scm1612s/include/: CHIPProjectConfig.h
examples/lighting-app/senscomm/scm1612s/: BUILD.gn
examples/lighting-app/senscomm/scm1612s/data_model/: lighting-app-splug.matter  lighting-app-splug.zap  lighting-app.matter  lighting-app.zap
examples/lighting-app/senscomm/scm1612s/include/: AppTask.h  CHIPProjectConfig.h
examples/lighting-app/senscomm/scm1612s/src/: AppTask.cpp
src/ble/: BleConfig.h
src/include/platform/: CHIPDeviceConfig.h
src/lib/dnssd/: Advertiser_ImplMinimalMdns.cpp
src/lib/dnssd/minimal_mdns/: Server.cpp
src/platform/: BUILD.gn
src/platform/senscomm/scm1612s/: BLEManagerImpl.cpp  BLEManagerImpl.h  BUILD.gn  CHIPDevicePlatformEvent.h  CHIPPlatformConfig.h  ConfigurationManagerImpl.cpp  ConfigurationManagerImpl.h  ConnectivityManagerImpl.cpp  ConnectivityManagerImpl_WIFI.cpp  FactoryDataProvider.cpp  FactoryDataProvider.h  KeyValueStoreManagerImpl.cpp  NetworkCommissioningWiFiDriver.cpp  NetworkCommissioningWiFiDriver.h  PlatformManagerImpl.cpp
src/setup_payload/: BUILD.gn
