# Copyright (c) 2021 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")
import("//build_overrides/scm1612s.gni")

import("${build_root}/config/defaults.gni")
import("${chip_root}/src/platform/device.gni")
import("${scm1612s_sdk_build_root}/scm1612s_executable.gni")
import("${scm1612s_sdk_build_root}/scm1612s_sdk.gni")

assert(current_os == "freertos")

scm1612s_project_dir = "${chip_root}/examples/lighting-app/senscomm/scm1612s"
examples_plat_dir = "${chip_root}/examples/platform/senscomm/scm1612s"
elf_name = "chip-scm1612s-lighting-app-example.out"

declare_args() {
  # Dump memory usage at link time.
  chip_print_memory_usage = true

  # PIN code for PASE session establishment.
  setup_pin_code = 20202021

  # Monitor & log memory usage at runtime.
  enable_heap_monitoring = false

  # Build update app
  build_update_image = false
}

action("build_wise_sdk") {
  script = "${scm1612s_sdk_build_root}/build-wise-sdk.py"

  output_path = root_out_dir + "/wise-sdk/"

  args = [
    rebase_path("${scm1612s_sdk_build_root}", root_build_dir),
    "scm1612s_matter_defconfig",
    "--output-path",
    output_path
#    rebase_path(output_path, root_build_dir)
  ]

  inputs = [
    "${scm1612s_sdk_build_root}/build-wise-sdk.py",
    "${scm1612s_sdk_root}/include/generated/timestamp_autogenerated.h"
    # Add other inputs here if needed
  ]

  outputs = [
    output_path + "timestamp_autogenerated.h",
    output_path + "kernel/kernel.a",
    output_path + "api/api.a",
    #output_path + "/app/app.a",
    output_path + "kernel/FreeRTOS/kernel-FreeRTOS.a",
    output_path + "kernel/FreeRTOS-ext/kernel-FreeRTOS-ext.a",
    output_path + "kernel/cmsis-freertos/kernel-cmsis-freertos.a",
    output_path + "kernel/freebsd/kernel-freebsd.a",
    output_path + "hal/arch/ndsv5/hal-arch-ndsv5.a",
    output_path + "hal/soc/scm2010/hal-soc-scm2010.a",
    output_path + "hal/board/scm2010-evb-qfn40/hal-board-scm2010-evb-qfn40.a",
    output_path + "hal/drivers/spi-flash/hal-drivers-spi-flash.a",
    output_path + "hal/drivers/wlan/hal-drivers-wlan.a",
    output_path + "hal/drivers/wlan/senscomm/prv/hal-drivers-wlan-senscomm-prv.a",
    output_path + "hal/drivers/rf/hal-drivers-rf.a",
    output_path + "hal/drivers/watchdog/hal-drivers-watchdog.a",
    output_path + "lib/cli/lib-cli.a",
    output_path + "lib/stdlib-ext/lib-stdlib-ext.a",
    output_path + "lib/proc/lib-proc.a",
    output_path + "lib/serial/lib-serial.a",
    output_path + "lib/net/lib-net.a",
    output_path + "lib/fs/lib-fs.a",
    output_path + "lib/lwip/lib-lwip.a",
    output_path + "lib/net80211/lib-net80211.a",
    output_path + "lib/ifconfig/lib-ifconfig.a",
    output_path + "lib/libifconfig/lib-libifconfig.a",
    output_path + "lib/cjson/lib-cjson.a",
    output_path + "lib/hostap/wpa_supplicant/lib-hostap-wpa_supplicant.a",
    output_path + "lib/mbedtls-2.28.10/library/lib-mbedtls-2.28.10-library.a",
    output_path + "lib/ble/nimble_port/lib-ble-nimble_port.a",
    output_path + "lib/ble/nimble_host/lib-ble-nimble_host.a",
    output_path + "lib/tinycrypt/lib-tinycrypt.a",
    output_path + "lib/scm_mcuboot/lib-scm_mcuboot.a",
    output_path + "lib/net/freebsd/mbuf/lib-net-freebsd-mbuf.a",
    output_path + "lib/net/freebsd/lib-net-freebsd.a",
    output_path + "hal/core/hal-core.a",
    output_path + "hal/proc/hal-proc.a",
    output_path + "hal/drivers/core/hal-drivers-core.a",
    output_path + "hal/fs/hal-fs.a",
    output_path + "hal/fs/patch/hal-fs-patch.a",
    output_path + "hal/drivers/serial/hal-drivers-serial.a",
    output_path + "hal/drivers/rtc/hal-drivers-rtc.a",
    output_path + "hal/drivers/clk/hal-drivers-clk.a",
    output_path + "hal/drivers/pinctrl/hal-drivers-pinctrl.a",
    output_path + "hal/drivers/ble/hal-drivers-ble.a",
    output_path + "hal/drivers/ble/priv/hal-drivers-ble-priv.a",
    output_path + "hal/drivers/crypto/hal-drivers-crypto.a",
    output_path + "hal/drivers/efuse/hal-drivers-efuse.a",
    output_path + "hal/drivers/systimer/hal-drivers-systimer.a",
    output_path + "hal/drivers/pta/hal-drivers-pta.a"
  ]
}

scm1612s_sdk_sources("lighting_app_sdk_sources") {
  sources = [ "${scm1612s_project_dir}/include/CHIPProjectConfig.h" ]

  include_dirs = [
    "${chip_root}/src/platform/senscomm/scm1612s",
    "${scm1612s_project_dir}/include",
    "${examples_plat_dir}",
  ]

  defines = [
#    "BOARD_ID=${scm1612s_board}",
#    "P6_LOG_ENABLED=1",
    "CHIP_DEVICE_CONFIG_USE_TEST_SETUP_PIN_CODE=${setup_pin_code}",
  ]

  public_configs =
      [ "${chip_root}/third_party/senscomm/scm1612s:scm1612s_sdk_config" ]

#  if (chip_enable_ota_requestor) {
#    public_configs += [ ":psoc6_ota_config" ]
#  }
}

scm1612s_postbuild("lighting_postbuild") {
  input_name = "${elf_name}"
  map_name = "System.map"
  deps = [
    "//:lighting_app.executable",
    "//:lighting_app.image"
  ]
}

scm1612s_executable("lighting_app") {
  output_name = "${elf_name}"
  include_dirs = []
  defines = [
    #"__PWM_DIMMABLE_LED__"
  ]

  sources = [
    "src/AppTask.cpp",
    "src/ColorFormat.cpp",
    "src/DimmableLEDWidget.cpp",
    "src/LEDWidget.cpp",
    "src/LightingManager.cpp",
    "src/ZclCallbacks.cpp",
    "src/main.cpp",
    "src/AtomicHack.cpp",
  ]

  deps = [
    ":lighting_app_sdk_sources",
    "${chip_root}/examples/common/QRCode",
    "${chip_root}/examples/lighting-app/lighting-common",
    "${chip_root}/examples/providers:device_info_provider",
    "${chip_root}/src/lib",
    "${chip_root}/src/setup_payload",
  ]

  include_dirs += [
    "include",
    "${examples_plat_dir}",
    "${scm1612s_project_dir}/include",
  ]

  defines = []

#  if (chip_enable_ota_requestor) {
#    defines += [ "MT793X_OTA_ENABLED" ]
#    sources += [ "${examples_plat_dir}/OTAConfig.cpp" ]
#  }

  if (enable_heap_monitoring) {
    sources += [ "${examples_plat_dir}/MemMonitoring.cpp" ]
    defines += [ "HEAP_MONITORING" ]
  }

  if (chip_print_memory_usage) {
    ldflags = [
      "-Wl,--print-memory-usage",
      "-fstack-usage",
    ]
  }

  output_dir = root_out_dir
}

#group("scm1612s") {
#  deps = [ ":lighting_app" ]
#}

#group("default") {
#  deps = [ ":scm1612s" ]
#}

group("default") {
  deps = [
           ":lighting_postbuild_map",
           ":lighting_postbuild_sign",
           ":lighting_postbuild_dis",
         ]
}
